<resources>
    <string name="app_name">NotificationsApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="push">push</string>
    <string name="sms">sms</string>
    <string name="notification_name">Notification name</string>
    <string name="msg_text">Write text here...</string>
    <string name="phone_number_Denis">+79261251902</string>
    <string name="back">back</string>
    <string name="create">create</string>
    <string name="save">save</string>
</resources>
