<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.volodden.notificationsapp.CreateNotification">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollIndicators="none|top|bottom|left|right|start|end"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <RadioGroup
                android:id="@+id/NotifType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rbPush"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbPush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onButtonPush"
                    android:text="@string/push" />

                <RadioButton
                    android:id="@+id/rbSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:onClick="onButtonSms"
                    android:text="@string/sms" />

            </RadioGroup>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/notification_name" />

            <EditText
                android:id="@+id/msgtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/msg_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="186dp"
                    android:layout_height="match_parent" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="183dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:layout_editor_absoluteX="188dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/phone_number_Denis" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:onClick="onButtonBack"/>

                <Button
                    android:id="@+id/buttonCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create"
                    android:onClick="onButtonCreate"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
